--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=9999
 DB_HOST=localhost
-DB_USER=root
-DB_NAME=userdata
+DB_USER=inkasalminen
+DB_NAME=timecheck
 DB_PASSWORD=Smörrebröd2022
 DB_POOL_SIZE=10
